@@ -42,6 +42,8 @@ PIG-5450: Pig-on-Spark3 E2E ORC test failing with java.lang.VerifyError: Bad ret
 
 PIG-5452: Null handling of FLATTEN with user defined schema (as clause) (knoguchi)
 
+PIG-5453: FLATTEN shifting fields incorrectly (knoguchi)
+
 Release 0.18.0 - Unreleased
  
 INCOMPATIBLE CHANGES
